[package]
name = "tguard-frontend"
version = "0.1.0"
edition = "2018"

[dependencies]
arrayvec = "0.7.1"
base64 = "0.13.0"
common = { path = "../common" }
hex = "0.4.3"
irmaseal-core = { path = "../../irmaseal/irmaseal-core", features = ["wasm_stream"]}
js-sys = "0.3.53"
lettre = { version = "0.10.0-rc.4", default-features = false, features = ["builder"] }
mail-parser = "0.4.1"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.68"
sha3 = "0.10.0"
validator = "0.14.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.26"
wee_alloc = "0.4.5"
yew = "0.18"
yew-router = "0.15.0"
mime_guess = "2.0.3"
mime = "0.3.16"
getrandom = { version = "0.2", features = ["js"] }
wasm-streams = "0.2.2"
futures = "0.3.21"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'Response',
  'Window',
  'Blob',
  'ReadableStream',
  'FileList',
  'HtmlSelectElement',
  'HtmlCollection',
]

[dev-dependencies]
regex = "1.5.4"
wasm-bindgen-test = "0.3.0"

[features]
default = ["upload"]
upload = []
download = []
send = []
sign = []
